cambios en skillsss

--- a/index.html
+++ b/index.html
@@ -118,37 +118,104 @@
 </section>
 
     <section id="experience" class="my-20 fade-in">
-      <h3 class="text-3xl font-bold text-pink-600 mb-8 border-b-4 border-pink-400 inline-block">Experiencia</h3>
-      <ul class="space-y-6 max-w-3xl mx-auto text-gray-700">
-        <li class="border-l-4 border-pink-600 pl-4">
-          <h4 class="font-semibold text-xl">Desarrollador Frontend - Freelance</h4>
-          <p class="italic text-sm text-pink-500">Actualidad</p>
-          <p>Ampliando conocimientos sobre sitios web, enfocándome en diseño responsivo, usabilidad y buenas prácticas.</p>
-        </li>
-        <li class="border-l-4 border-pink-600 pl-4">
-          <h4 class="font-semibold text-xl">Estudiante de Licenciatura en Sistemas de Información</h4>
-          <p class="italic text-sm text-pink-500">Enero 2022 - Actualidad</p>
-          <p>Estudiando para diseñar, desarrollar y gestionar sistemas tecnológicos que ayudan a las organizaciones a procesar y manejar información.</p>
-        </li>
-        <li class="border-l-4 border-pink-600 pl-4">
-          <h4 class="font-semibold text-xl">Estudiante de Ingeniería Industrial</h4>
-          <p class="italic text-sm text-pink-500">Enero 2021 - Diciembre 2021</p>
-          <p>Realicé estudios con el fin de optimizar procesos, recursos y sistemas para mejorar la productividad y eficiencia en empresas.</p>
-        </li>
-      </ul>
-    </section>
+    <h3 class="text-3xl font-bold text-pink-600 mb-12 border-b-4 border-pink-400 inline-block">Experiencia</h3>
+    
+    <div class="relative max-w-4xl mx-auto">
+        <div class="absolute inset-0 flex items-center justify-center">
+            <div class="w-1 bg-pink-400 h-full"></div>
+        </div>
+
+        <ul class="space-y-12">
+            <li class="relative">
+                <div class="flex items-center justify-start">
+                    <div class="w-8 h-8 rounded-full bg-pink-600 border-4 border-pink-100 absolute left-0 transform -translate-x-1/2 flex items-center justify-center">
+                        <span class="text-white font-bold text-sm">1</span>
+                    </div>
+                    <div class="bg-pink-100 p-6 rounded-lg shadow-md ml-12 hover:shadow-lg transition">
+                        <h4 class="font-semibold text-xl text-pink-700">Desarrollador Frontend - Freelance</h4>
+                        <p class="italic text-sm text-pink-500 mb-2">Actualidad</p>
+                        <p class="text-gray-700">Ampliando conocimientos sobre sitios web, enfocándome en diseño responsivo, usabilidad y buenas prácticas.</p>
+                    </div>
+                </div>
+            </li>
+
+            <li class="relative">
+                <div class="flex items-center justify-start">
+                    <div class="w-8 h-8 rounded-full bg-pink-600 border-4 border-pink-100 absolute left-0 transform -translate-x-1/2 flex items-center justify-center">
+                        <span class="text-white font-bold text-sm">2</span>
+                    </div>
+                    <div class="bg-pink-100 p-6 rounded-lg shadow-md ml-12 hover:shadow-lg transition">
+                        <h4 class="font-semibold text-xl text-pink-700">Estudiante de Licenciatura en Sistemas de Información</h4>
+                        <p class="italic text-sm text-pink-500 mb-2">Enero 2022 - Actualidad</p>
+                        <p class="text-gray-700">Estudiando para diseñar, desarrollar y gestionar sistemas tecnológicos que ayudan a las organizaciones a procesar y manejar información.</p>
+                    </div>
+                </div>
+            </li>
+
+            <li class="relative">
+                <div class="flex items-center justify-start">
+                    <div class="w-8 h-8 rounded-full bg-pink-600 border-4 border-pink-100 absolute left-0 transform -translate-x-1/2 flex items-center justify-center">
+                        <span class="text-white font-bold text-sm">3</span>
+                    </div>
+                    <div class="bg-pink-100 p-6 rounded-lg shadow-md ml-12 hover:shadow-lg transition">
+                        <h4 class="font-semibold text-xl text-pink-700">Estudiante de Ingeniería Industrial</h4>
+                        <p class="italic text-sm text-pink-500 mb-2">Enero 2021 - Diciembre 2021</p>
+                        <p class="text-gray-700">Realicé estudios con el fin de optimizar procesos, recursos y sistemas para mejorar la productividad y eficiencia en empresas.</p>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
+</section>
 
     <section id="skills" class="my-20 fade-in">
-      <h3 class="text-3xl font-bold text-pink-600 mb-8 border-b-4 border-pink-400 inline-block">Habilidades</h3>
-      <div class="max-w-4xl mx-auto grid grid-cols-2 md:grid-cols-4 gap-6 text-gray-700 text-center">
-        <div class="bg-pink-100 font-bold rounded-lg p-4 shadow hover:shadow-lg transition transform hover:scale-105">C++</div>
-        <div class="bg-pink-100 font-bold rounded-lg p-4 shadow hover:shadow-lg transition transform hover:scale-105">HTML</div>
-        <div class="bg-pink-100 font-bold rounded-lg p-4 shadow hover:shadow-lg transition transform hover:scale-105">CSS</div>
-        <div class="bg-pink-100 font-bold rounded-lg p-4 shadow hover:shadow-lg transition transform hover:scale-105">JavaScript</div>
-        <div class="bg-pink-100 font-bold rounded-lg p-4 shadow hover:shadow-lg transition transform hover:scale-105">GitHub</div>
-        <div class="bg-pink-100 font-bold rounded-lg p-4 shadow hover:shadow-lg transition transform hover:scale-105">QT</div>
-      </div>
-    </section>
+    <h3 class="text-3xl font-bold text-pink-600 mb-8 border-b-4 border-pink-400 inline-block">Habilidades</h3>
+    <div class="max-w-4xl mx-auto grid grid-cols-2 md:grid-cols-3 gap-6">
+
+      <div class="group relative bg-pink-100 rounded-lg p-6 shadow-lg overflow-hidden cursor-pointer hover:bg-pink-200 transition">
+            <h4 class="font-bold text-xl text-pink-700 group-hover:text-pink-800 transition">C++</h4>
+            <div class="absolute inset-0 flex items-center justify-center bg-pink-700 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                <p class="text-white text-center text-sm p-2">Lenguaje para software de alto rendimiento, juegos y sistemas.</p>
+            </div>
+        </div>
+
+        <div class="group relative bg-pink-100 rounded-lg p-6 shadow-lg overflow-hidden cursor-pointer hover:bg-pink-200 transition">
+            <h4 class="font-bold text-xl text-pink-700 group-hover:text-pink-800 transition">HTML</h4>
+            <div class="absolute inset-0 flex items-center justify-center bg-pink-700 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                <p class="text-white text-center text-sm p-2">Estructura el contenido de páginas web.</p>
+            </div>
+        </div>
+
+        <div class="group relative bg-pink-100 rounded-lg p-6 shadow-lg overflow-hidden cursor-pointer hover:bg-pink-200 transition">
+            <h4 class="font-bold text-xl text-pink-700 group-hover:text-pink-800 transition">CSS</h4>
+            <div class="absolute inset-0 flex items-center justify-center bg-pink-700 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                <p class="text-white text-center text-sm p-2">Da estilo y diseño visual a páginas web.</p>
+            </div>
+        </div>
+
+        <div class="group relative bg-pink-100 rounded-lg p-6 shadow-lg overflow-hidden cursor-pointer hover:bg-pink-200 transition">
+            <h4 class="font-bold text-xl text-pink-700 group-hover:text-pink-800 transition">JavaScript</h4>
+            <div class="absolute inset-0 flex items-center justify-center bg-pink-700 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                <p class="text-white text-center text-sm p-2">Añade interactividad y dinamismo a sitios web.</p>
+            </div>
+        </div>
+
+        <div class="group relative bg-pink-100 rounded-lg p-6 shadow-lg overflow-hidden cursor-pointer hover:bg-pink-200 transition">
+            <h4 class="font-bold text-xl text-pink-700 group-hover:text-pink-800 transition">GitHub</h4>
+            <div class="absolute inset-0 flex items-center justify-center bg-pink-700 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                <p class="text-white text-center text-sm p-2">Plataforma para guardar y colaborar en proyectos de código.</p>
+            </div>
+        </div>
+
+        <div class="group relative bg-pink-100 rounded-lg p-6 shadow-lg overflow-hidden cursor-pointer hover:bg-pink-200 transition">
+            <h4 class="font-bold text-xl text-pink-700 group-hover:text-pink-800 transition">QT</h4>
+            <div class="absolute inset-0 flex items-center justify-center bg-pink-700 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                <p class="text-white text-center text-sm p-2">Herramienta para crear aplicaciones con interfaces gráficas.</p>
+            </div>
+        </div>
+
+    </div>
+</section>
 
     <section id="contacto" class="my-20 fade-in max-w-3xl mx-auto">
       <h3 class="text-3xl font-bold text-pink-600 mb-8 border-b-4 border-pink-400 inline-block">Contacto</h3>
