--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ a, button, .cursor-pointer {
     Desarrolladora Web Junior
   </h2>
   <p class="max-w-xl mx-auto text-gray-700 text-lg md:text-xl mb-8 leading-relaxed drop-shadow-sm">
-    Apasionada por crear sitios creativos, funcionales y que reflejen tu estilo personal.
+    Apasionada por crear sitios creativos, funcionales y que reflejen estilo personal.
   </p>
   <div class="flex gap-6">
     <a href="#contacto"
@@ -133,7 +133,7 @@ a, button, .cursor-pointer {
   <main class="pt-24 max-w-5xl mx-auto px-6">
 
     <section id="projects" class="my-20 fade-in">
-    <h3 class="text-3xl font-bold text-pink-600 mb-8 border-b-4 border-pink-400 inline-block font-sanrio">Proyectos</h3>
+    <h3 class="text-3xl font-bold text-pink-600 mb-8 border-b-4 border-pink-400 inline-block font-sanrio">Mis Proyectos</h3>
     
     <div id="project-container" class="relative">
 
@@ -168,7 +168,7 @@ a, button, .cursor-pointer {
 </section>
 
     <section id="experience" class="my-20 fade-in">
-    <h3 class="text-3xl font-bold text-pink-600 mb-12 border-b-4 border-pink-400 inline-block font-sanrio">Experiencia</h3>
+    <h3 class="text-3xl font-bold text-pink-600 mb-12 border-b-4 border-pink-400 inline-block font-sanrio">Mi Experiencia</h3>
     
     <div class="relative max-w-4xl mx-auto">
         <div class="absolute inset-0 flex items-center justify-center">
@@ -182,7 +182,7 @@ a, button, .cursor-pointer {
                         <span class="text-white font-bold text-sm">1</span>
                     </div>
                     <div class="bg-pink-100 p-6 rounded-lg shadow-md ml-12 hover:shadow-lg transition">
-                        <h4 class="font-semibold text-xl text-pink-700">Desarrollador Frontend - Freelance</h4>
+                        <h4 class="font-semibold text-xl text-pink-700">Desarrolladora Frontend - Freelance</h4>
                         <p class="italic text-sm text-pink-500 mb-2">Actualidad</p>
                         <p class="text-gray-700">Ampliando conocimientos sobre sitios web, enfocándome en diseño responsivo, usabilidad y buenas prácticas.</p>
                     </div>
@@ -219,7 +219,7 @@ a, button, .cursor-pointer {
 </section>
 
     <section id="skills" class="my-20 fade-in">
-    <h3 class="text-3xl font-bold text-pink-600 mb-8 border-b-4 border-pink-400 inline-block font-sanrio">Habilidades</h3>
+    <h3 class="text-3xl font-bold text-pink-600 mb-8 border-b-4 border-pink-400 inline-block font-sanrio">Mis Skills</h3>
     <div class="max-w-4xl mx-auto grid grid-cols-2 md:grid-cols-3 gap-6">
 
       <div class="group relative bg-pink-100 rounded-lg p-6 shadow-lg overflow-hidden cursor-pointer hover:bg-pink-200 transition">
@@ -268,7 +268,7 @@ a, button, .cursor-pointer {
 </section>
 
     <section id="contacto" class="my-20 fade-in max-w-3xl mx-auto">
-      <h3 class="text-3xl font-bold text-pink-600 mb-8 border-b-4 border-pink-400 inline-block font-sanrio">Contacto</h3>
+      <h3 class="text-3xl font-bold text-pink-600 mb-8 border-b-4 border-pink-400 inline-block font-sanrio">Y mi contacto</h3>
       <p class="mb-6 text-gray-700 max-w-md">¡Me encantaría saber de vos! Podés escribirme para proyectos, consultas o simplemente para saludar ♡
       </p>
       <form class="bg-pink-100 p-6 rounded-lg shadow-md" onsubmit="return false;">
