--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ a, button, .cursor-pointer {
           class="w-full p-3 mb-4 rounded-md border bg-pink-50 border-pink-300 focus:outline-none focus:ring-2 focus:ring-pink-500" />
 
         <label for="message" class="block mb-2 font-semibold text-gray-700">Mensaje</label>
-        <textarea id="message" name="message" rows="4" placeholder="Escribe tu mensaje aquí..."
+        <textarea id="message" name="message" rows="4" placeholder="Dejame tu mensajito acá..."
           required class="w-full p-3 mb-4 rounded-md bg-pink-50 border border-pink-300 focus:outline-none focus:ring-2 focus:ring-pink-500"></textarea>
 
         <button
